feat(evaluation): setup test
